Instant Address Standard/main/default/objects/Account/fields/Account_Mailing_SummaryFlags__c.field-meta.xml
<CustomField>
    <fullName>Account_Mailing_SummaryFlags__c</fullName>
    <label>Account Mailing SummaryFlags</label>
    <length>100</length>
    <type>Text</type>
</CustomField>