Instant Address Standard/main/default/objects/Account/fields/Account_Mailing_UITooltip__c.field-meta.xml
<CustomField>
    <fullName>Account_Mailing_UITooltip__c</fullName>
    <label>Account Mailing UITooltip</label>
    <length>200</length>
    <type>Text</type>
</CustomField>