Instant Address Standard/main/default/objects/Account/fields/BillingAddressChangeFlags__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressChangeFlags__c</fullName>
    <label>Billing Change Flag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>