Instant Address Standard/main/default/objects/Account/fields/BillingAddressCOUNTYID__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressCOUNTYID__c</fullName>
    <label>Billing Address County Id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>