Instant Address Standard/main/default/objects/Account/fields/BillingAddressCOUNTYNAME__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressCOUNTYNAME__c</fullName>
    <label>Billing Address County Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>