Instant Address Standard/main/default/objects/Account/fields/BillingAddressDPC__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressDPC__c</fullName>
    <label>Billing Address DPC</label>
    <length>2</length>
    <type>Text</type>
</CustomField>