Instant Address Standard/main/default/objects/Account/fields/BillingAddressDPCD__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressDPCD__c</fullName>
    <label>Billing Address DPCD</label>
    <length>1</length>
    <type>Text</type>
</CustomField>