Instant Address Standard/main/default/objects/Account/fields/BillingAddressDPV__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressDPV__c</fullName>
    <label>Billing DPV</label>
    <length>3</length>
    <type>Text</type>
</CustomField>