Instant Address Standard/main/default/objects/Account/fields/BillingAddressDPVFlag__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressDPVFlag__c</fullName>
    <label>Billing DPV Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>