Instant Address Standard/main/default/objects/Account/fields/BillingAddressLatitude__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressLatitude__c</fullName>
    <label>Billing Latitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>