Instant Address Standard/main/default/objects/Account/fields/BillingAddressLongitude__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressLongitude__c</fullName>
    <label>Billing Longitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>