Instant Address Standard/main/default/objects/Account/fields/BillingAddressRDI__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressRDI__c</fullName>
    <label>Billing Address RDI</label>
    <length>1</length>
    <type>Text</type>
</CustomField>