Instant Address Standard/main/default/objects/Account/fields/BillingAddressValidationDate__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressValidationDate__c</fullName>
    <label>Billing Validation Date</label>
    <type>Date</type>
</CustomField>