Instant Address Standard/main/default/objects/Account/fields/BillingAddressVerificationFlag__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressVerificationFlag__c</fullName>
    <label>Billing Verification Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>