Instant Address Standard/main/default/objects/Account/fields/BillingFIPS__c.field-meta.xml
<CustomField>
    <fullName>BillingFIPS__c</fullName>
    <label>Billing FIPS</label>
    <length>5</length>
    <type>Text</type>
</CustomField>