Instant Address Standard/main/default/objects/Account/fields/BillingResponseFlag__c.field-meta.xml
<CustomField>
    <fullName>BillingResponseFlag__c</fullName>
    <label>Billing Response Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>