Instant Address Standard/main/default/objects/Account/fields/Matching_Gift_SummaryFlags__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_SummaryFlags__c</fullName>
    <label>Matching Gift SummaryFlags</label>
    <length>100</length>
    <type>Text</type>
</CustomField>