Instant Address Standard/main/default/objects/Account/fields/Matching_Gift_UITooltip__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_UITooltip__c</fullName>
    <label>Matching Gift UITooltip</label>
    <length>200</length>
    <type>Text</type>
</CustomField>