Instant Address Standard/main/default/objects/Account/fields/Permanent_Address_SummaryFlags__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address_SummaryFlags__c</fullName>
    <label>Permanent Address SummaryFlags</label>
    <length>100</length>
    <type>Text</type>
</CustomField>