Instant Address Standard/main/default/objects/Account/fields/Permanent_Address_UITooltip__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address_UITooltip__c</fullName>
    <label>Permanent Address UITooltip</label>
    <length>200</length>
    <type>Text</type>
</CustomField>