Instant Address Standard/main/default/objects/Account/fields/ShippingAddressChangeFlags__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressChangeFlags__c</fullName>
    <label>Shipping Change Flag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>