Instant Address Standard/main/default/objects/Account/fields/ShippingAddressCOUNTYID__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressCOUNTYID__c</fullName>
    <label>Shipping Address County Id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>