Instant Address Standard/main/default/objects/Account/fields/ShippingAddressCOUNTYNAME__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressCOUNTYNAME__c</fullName>
    <label>Shipping Address County Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>