Instant Address Standard/main/default/objects/Account/fields/ShippingAddressDPC__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressDPC__c</fullName>
    <label>Shipping Address DPC</label>
    <length>2</length>
    <type>Text</type>
</CustomField>