Instant Address Standard/main/default/objects/Account/fields/ShippingAddressDPCD__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressDPCD__c</fullName>
    <label>Shipping Address DPCD</label>
    <length>1</length>
    <type>Text</type>
</CustomField>