Instant Address Standard/main/default/objects/Account/fields/ShippingAddressDPV__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressDPV__c</fullName>
    <label>Shipping DPV</label>
    <length>3</length>
    <type>Text</type>
</CustomField>