Instant Address Standard/main/default/objects/Account/fields/ShippingAddressDPVFlag__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressDPVFlag__c</fullName>
    <label>Shipping DPV Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>