Instant Address Standard/main/default/objects/Account/fields/ShippingAddressLatitude__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressLatitude__c</fullName>
    <label>&lt;Shipping Latitude&gt;</label>
    <length>20</length>
    <type>Text</type>
</CustomField>