Instant Address Standard/main/default/objects/Account/fields/ShippingAddressLongitude__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressLongitude__c</fullName>
    <label>Shipping Longitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>