Instant Address Standard/main/default/objects/Account/fields/ShippingAddressRDI__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressRDI__c</fullName>
    <label>Shipping Address RDI</label>
    <length>1</length>
    <type>Text</type>
</CustomField>