Instant Address Standard/main/default/objects/Account/fields/ShippingAddressValidationDate__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressValidationDate__c</fullName>
    <label>Shipping Validation Date</label>
    <type>Date</type>
</CustomField>