Instant Address Standard/main/default/objects/Account/fields/ShippingAddressVerificationFlag__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressVerificationFlag__c</fullName>
    <label>Shipping Verification Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>