Instant Address Standard/main/default/objects/Account/fields/ShippingFIPS__c.field-meta.xml
<CustomField>
    <fullName>ShippingFIPS__c</fullName>
    <label>Shipping FIPS</label>
    <length>5</length>
    <type>Text</type>
</CustomField>