Instant Address Standard/main/default/objects/Account/fields/ShippingResponseFlag__c.field-meta.xml
<CustomField>
    <fullName>ShippingResponseFlag__c</fullName>
    <label>Shipping Response Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>